Updates metadata for improved SEO
Updates the site metadata, including Open Graph and Twitter tags, to reflect the new domain and improve SEO.

Introduces a new HTMLHead component for managing head elements, making it easier to update metadata across the site, particularly for blog posts.

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -122,6 +122,7 @@
   "news_readmore": "read more",
   "footer_waiting": "What are you waiting for?",
   "title_home": "Home",
+  "title_slogan": "Build AAC boards with the power of AI",
   "title_blog": "Blog",
   "title_contact": "Contact",
   "title_history": "History",
